--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,38 +1,30 @@
 @import './variables';
 
-:root {
-  --background: $white;
-  --foreground: $black;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 html,
 body {
+  background-color: $black;
+  color: $white;
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: var(--font-body), Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: unset;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-/* Font smoothing */
-.antialiased {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.subpixel-antialiased {
-  -webkit-font-smoothing: auto;
-  -moz-osx-font-smoothing: auto;
+h1, 
+h2,
+h3 {
+  font-family: var(--font-header), 'Lucida Handwriting', 'Apple Chancery', 'Brush Script', Cursive;
 }
 
 a {
@@ -40,8 +32,9 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+button,
+input,
+textarea,
+select {
+  font: inherit;
 }
