Layout initial view. Create sections for content. wip

--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,5 +1,7 @@
 $black: #000000;
-$white: #ffffff;
+$background: #141414;
+$white: #fefefe;
+$light-gray: #e6e6e6;
 
 $red: #ef233c;
 $orange: #ff7e27;
