--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -8,11 +8,12 @@
 
 html,
 body {
-  background-color: $black;
-  color: $white;
+  background-color: $background;
+  color: $light-gray;
   max-width: 100vw;
   overflow-x: hidden;
   font-family: var(--font-body), Arial, Helvetica, sans-serif;
+  font-weight: 200;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -21,10 +22,17 @@ body {
   margin: unset;
 }
 
-h1, 
-h2,
+h1 {
+  font-weight: 200;
+  font-size: 62px;
+}
+h2 {
+  font-weight: 200;
+  font-size: 36px;
+}
 h3 {
-  font-family: var(--font-header), 'Lucida Handwriting', 'Apple Chancery', 'Brush Script', Cursive;
+  font-weight: 200;
+  font-size: 28px;
 }
 
 a {
@@ -37,4 +45,11 @@ input,
 textarea,
 select {
   font: inherit;
+}
+button,
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+  all: unset;
 }
