--- a/src/app/ui/navigation.module.scss
+++ b/src/app/ui/navigation.module.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 .footer {
-  background-color: lighten($black, 25%);
+  background-color: lighten($background, 15%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,15 +9,20 @@
 }
 
 .header {
-  margin: 10px 10px 0 10px;
+  position: fixed;
+  top: 0;
+  z-index: 500;
+}
+.logo {
   background: -webkit-linear-gradient($orange, $red, $red, $purple);
   background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-decoration: none;
-  font-weight: bold;
+  padding: 10px 10px 0 15px;
+  font-weight: 600;
   font-size: 34px;
   line-height: 1;
-  opacity: 1;
+  text-decoration: none;
   transition: all 0.3s;
+  opacity: 1;
+  -webkit-text-fill-color: transparent;
 }
