--- a/src/app/ui/home-top.module.scss
+++ b/src/app/ui/home-top.module.scss
@@ -77,3 +77,21 @@ $line: (
     left: 200%;
   }
 }
+
+button.nav {
+  background-color: transparent;
+  border: 1px solid $red;
+  border-radius: 6px;
+  padding: 8px 16px;
+  font-size: 17px;
+  font-weight: 400;
+  color: $red;
+  line-height: 1.1;
+  cursor: pointer;
+  transition: 0.2s all ease-in-out;
+  &:hover {
+    background-color: darken($purple, 35%);
+    color: $orange;
+    border-color: $orange;
+  }
+}
