--- a/src/app/ui/section.module.scss
+++ b/src/app/ui/section.module.scss
@@ -5,6 +5,7 @@
     border-top: 1px solid rgba($orange, 0.2);
     background: $background;
     min-height: 350px;
+    padding: 0 25px;
   }
   &-width {
     max-width: 1024px;
