--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,5 +1,10 @@
 @import './variables';
-
+.page {
+  &-top {
+    position: relative;
+    overflow: hidden;
+  }
+}
 p.intro {
   font-size: 21px;
   line-height: 1.3;
