Add in Connecting links

--- a/src/app/ui/home-top.module.scss
+++ b/src/app/ui/home-top.module.scss
@@ -32,6 +32,7 @@ p.intro {
 .button-container {
   display: flex;
   gap: 10px;
+  transition: all 0.3s ease;
 }
 
 button.nav {
@@ -50,6 +51,17 @@ button.nav {
     color: $orange;
     border-color: $orange;
   }
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 499; // just below navbar which is 500
+  padding: 10px 0;
+  justify-content: center;
+  background: linear-gradient(135deg, rgba($black,.85) -55%, rgba($purple,.85) 150%);
+  width: 100%;
 }
 
 @keyframes lineUp {
