--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,5 +9,17 @@ p.intro {
   font-size: 21px;
   line-height: 1.3;
 }
+.connect {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  justify-content: center;
+}
 
+.at {
+  font-size: 60px;
+  line-height: 0.65;
+  font-weight: 600;
+  margin-left: -3px;
+}
 
